--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-world-flags": "^1.5.1",
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
